# dashboard_nereides

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  test.csv  vite.config.ts  vite.config.ts.timestamp-1746710398294-ea18e8aa4ab13.mjs
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  can.rs  cross.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  constant.rs  csv_writer.rs  gps.rs  lib.rs  mqtt copy.rs  mqtt.rs  socket.rs  uart_communication.rs
src/component/: coloredData.vue
