[package]
name = "dashboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
csv = "1.2"
log = "0.4"
tauri-plugin-log = "2"
rand = "0.8"

chrono = "0.4"
indexmap = "1.9"
paho-mqtt = "0.13.1"
serialport = "4.0.0"

[target.'cfg(unix)'.dependencies]
socketcan = "2.0"
serialport = "4.0.0"
linux-embedded-hal = "0.4.0"



[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
